<resources>
    <string name="app_name">res app</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="forgot_password">Forgot password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_enter_your_email_here">please enter your email here</string>
    <string name="Done">Done</string>
    <string name="Full_Name">Full Name</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Create">Create</string>
    <string name="Create_Account">Create Account</string>
    <string name="Sign_out">Sign out</string>
    <string name="Notifications">Notifications</string>
    <string name="New_reservation_from_Han_Lee">New reservation from Han Lee</string>
    <string name="Welcome">Welcome</string>
    <string name="April_25">April 25</string>
    <string name="time_10_15_AM">10:15 AM</string>
    <string name="Han_Lee">Han Lee</string>
    <string name="Sarah_Jones">Sarah Jones</string>
    <string name="Cancel">Cancel</string>
    <string name="July_17">July 17</string>
    <string name="cancel_reservation_for_Han_lee">cancel reservation for Han lee</string>
    <string name="cancel_reservation_for_sarah_jones">cancel reservation for sarah jones"</string>
    <string name="Here_s_whats_happening_today">Here’s what’s happening today</string>
    <string name="Upload">Upload</string>
    <string name="Manage_menu">Manage menu</string>
    <string name="View_reservations">View reservations</string>
    <string name="FOOD_MENU">FOOD MENU</string>
    <string name="Edit">Edit</string>
    <string name="Beef_BURGER">Beef Burger</string>
    <string name="Chicken_burger">Chicken burger</string>
    <string name="ten_pounds">£10</string>
    <string name="Pizza">Pizza</string>
    <string name="Malbec_bottle">Malbec bottle</string>
    <string name="fifteen_pounds">£15</string>
    <string name="Pstar_Martini">Pstar Martini</string>
    <string name="eight_pounds">£8</string>
    <string name="Sbeach">Sbeach</string>
    <string name="Beer">Beer</string>
    <string name="four">£4</string>
    <string name="upload_file">upload file</string>
    <string name="Reservations">Reservations</string>
    <string name="April_25__2026____7_00_PM">April 25, 2026,   7:00 PM</string>
    <string name="Book">Book</string>
    <string name="Select_The_Time">Select The Time</string>
    <string name="Select_The_Date">Select The Date</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="slash">/</string>
    <string name="colon">:</string>
    <string name="Home">Home</string>
    <string name="cal">cal</string>
    <string name="sign_up">Dont have an account? Sign up</string>
    <string name="Make_a_Reservation">Make a Reservation</string>
    <string name="Menu_Item">Menu Item</string>
    <string name="hint_price">£</string>
    <string name="Delete">Delete</string>
    <string name="email_fab_desc">Send email</string>
    <string name="add_menu_item">add menu item</string>
    <string name="home">home</string>
    <string name="calendar">calendar</string>
    <string name="Minute">Minute</string>
    <string name="Hour">Hour</string>


</resources>