<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Back -->
    <ImageButton
        android:id="@+id/btnBack"
        android:contentDescription="@string/back"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/outline_arrow_back_ios_24"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Upload file -->
    <Button
        android:id="@+id/btnUpload"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/upload_file"
        android:drawablePadding="-14dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="#adadad"
        android:drawableStart="@drawable/outline_drive_folder_upload_24"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Done -->
    <Button
        android:id="@+id/btnDone"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/done"
        android:textStyle="bold"
        android:background="#adadad"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
